--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.3.67"
   }
 }
